--- a/attoparsec.cabal
+++ b/attoparsec.cabal
@@ -18,9 +18,10 @@ description:
     file formats.
 
 tested-with:
-  GHC == 9.8.1
-  GHC == 9.6.3
-  GHC == 9.4.7
+  GHC == 9.10.0
+  GHC == 9.8.2
+  GHC == 9.6.5
+  GHC == 9.4.8
   GHC == 9.2.8
   GHC == 9.0.2
   GHC == 8.10.7
@@ -29,7 +30,8 @@ tested-with:
   GHC == 8.4.4
   GHC == 8.2.2
   GHC == 8.0.2
-  GHC == 7.10.3
+  -- Older versions are not supported by ghcup on ubuntu-22.04
+  -- GHC == 7.10.3
   -- GHC == 7.8.4
   -- GHC == 7.6.3
   -- GHC == 7.4.2
